
syntax = "proto3";
package grpcService; // 包名


message CommonField {
    string pageIndex = 1;
    string pageSize = 2;
}

service UserCrudService {
    rpc Create (CreateUserRequestType) returns (CreateUserResponseType) {}
    rpc Delete (DeleteUserRequestType) returns (DeleteUserResponseType) {}
    rpc Update (UpdateUserRequestType) returns (UpdateUserResponseType) {}
    rpc Find (FindUserRequestType) returns (FindUserResponseType) {}
}

//User
message User {

    int32 id = 1;
    string wechatID = 2;
    string phone = 3;
    string email = 4;
}

message CreateUserRequestType{

    int32 id = 1;
    string wechatID = 2;
    string phone = 3;
    string email = 4;
}

message CreateUserResponseType{
    int32 responseCode = 2;
    string responseDesc =  3;
}

message DeleteUserRequestType{
    string id = 1;
}

message DeleteUserResponseType{
    int32 responseCode = 2;
    string responseDesc =  3;
}

message UpdateUserRequestType{

    int32 id = 1;
    string wechatID = 2;
    string phone = 3;
    string email = 4;
}

message UpdateUserResponseType{
    int32 responseCode = 2;
    string responseDesc =  3;
}

message FindUserRequestType{
    User entity = 1;
    CommonField commonField = 2;
}

message FindUserResponseType{
    repeated User data = 1;
    int32 responseCode = 2;
    string responseDesc =  3;
}

service ActivityFieldCustomCrudService {
    rpc Create (CreateActivityFieldCustomRequestType) returns (CreateActivityFieldCustomResponseType) {}
    rpc Delete (DeleteActivityFieldCustomRequestType) returns (DeleteActivityFieldCustomResponseType) {}
    rpc Update (UpdateActivityFieldCustomRequestType) returns (UpdateActivityFieldCustomResponseType) {}
    rpc Find (FindActivityFieldCustomRequestType) returns (FindActivityFieldCustomResponseType) {}
}

//ActivityFieldCustom
message ActivityFieldCustom {

    int32 id = 1;
    string activityId = 2;
    string customs = 3;
}

message CreateActivityFieldCustomRequestType{

    int32 id = 1;
    string activityId = 2;
    string customs = 3;
}

message CreateActivityFieldCustomResponseType{
    int32 responseCode = 2;
    string responseDesc =  3;
}

message DeleteActivityFieldCustomRequestType{
    string id = 1;
}

message DeleteActivityFieldCustomResponseType{
    int32 responseCode = 2;
    string responseDesc =  3;
}

message UpdateActivityFieldCustomRequestType{

    int32 id = 1;
    string activityId = 2;
    string customs = 3;
}

message UpdateActivityFieldCustomResponseType{
    int32 responseCode = 2;
    string responseDesc =  3;
}

message FindActivityFieldCustomRequestType{
    ActivityFieldCustom entity = 1;
    CommonField commonField = 2;
}

message FindActivityFieldCustomResponseType{
    repeated ActivityFieldCustom data = 1;
    int32 responseCode = 2;
    string responseDesc =  3;
}
